# ProfiledPIDController

./: CMakeLists.txt
include/: PIDController.h  ProfiledPIDController.h  TrapezoidProfile.h
src/: PIDController.cpp  TrapezoidProfile.cpp
test/: tester.cpp
